--- a/chat-room/index.html
+++ b/chat-room/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='rgb(184,46,46)' d='M256 32C114.62 32 0 125.1 0 240c0 49.6 24.5 95.4 65.5 131.2C56.7 428.1 7.8 469.3 7.5 469.6c-10.1 8.4-4.5 25.2 8.5 25.2 66.2 0 116.4-31.4 138.3-47.4 31.5 9.2 66.3 14.6 101.7 14.6 141.38 0 256-93.1 256-208S397.38 32 256 32z'/%3E%3C/svg%3E"
+    />
     <title>VazzChat</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
